fixed devise constant error

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <% @title = "Edit #{resource_name.to_s.humanize}" %>
 <%= render :layout => "layouts/minimal" do %>
-<%= render partial: "layouts/sidenav" %>
+<%#= render partial: "layouts/sidenav" %>
 <%# current_user.update_attribute :admin, true %>
 <div id="main" class='devise'>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
