--- a/app/views/layouts/_sidenav.html.erb
+++ b/app/views/layouts/_sidenav.html.erb
@@ -1,9 +1,11 @@
 <div class="nav-side-menu ">
  <div>
+    <% if user_signed_in? %>
     <% if current_user.try(:type) == "ManagerUser" %>
    <%= render  'shared/quickjobs', contract: Contract.where(act_code: @manger.split(",")).order(params[:sort] || :date_of_event).tenday.all  %>
    <% else %>
    <%= render "layouts/usernav" %> 
+   <% end %>
    <% end %>
  </div>
 
