--- a/app/views/contracts/_frontjobs.html.erb
+++ b/app/views/contracts/_frontjobs.html.erb
@@ -6,7 +6,7 @@
 <!--<%# end %>-->
 <%#= link_to "Calendar", calendar_path %>
 <div class="clearfix container">
-    <h5>Upcoming Events</h5>
+    <div class="page-header row row-same-height"><h4 class="col-sm-12 col-xs-height text-uppercase">Upcoming Events</h4> </div><h5></h5>
       <hr>
   <% contract.each do |contract| %>
     <div class="sheet-inner m20 text-gray-50">
