--- a/app/views/contracts/_management.html.erb
+++ b/app/views/contracts/_management.html.erb
@@ -1,4 +1,4 @@
-<div class="page-header row row-same-height"><h4 class="col-sm-12 col-xs-height text-uppercase">CMG</h4> </div>
+<div class="page-header row row-same-height"><h4 class="col-sm-12 col-xs-height text-uppercase"><%= app_name %></h4> </div>
 
 <%= render '/show/blank', contract: @contracts  %>
 
