--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -1,10 +1,11 @@
 <%#= title "DashBoard" %>
-<%= render "layouts/navbar" %>
+<%#= render "layouts/navbar" %>
 <%# if current_user.try(:admin?) %>
 <%#= admin_types.include?(current_user.try(:type)) %>
 <%# if admin_types.include?(current_user.try(:type?)) %>
-<% if current_user.try(:type) == "ManagerUser" %>
 <%#= link_to "emails", rails_email_preview.rep_root_url %>
+<% if current_user.try(:type) == "ManagerUser" %>
+
 <%= render 'manager', contract: @contracts %>
 
 <% elsif current_user.try(:type) == "ManagementUser" %>
