--- a/app/views/emails/_email_footer.html.erb
+++ b/app/views/emails/_email_footer.html.erb
@@ -1,16 +1,5 @@
-<table border="0" cellpadding="10" cellspacing="0" width="100%">
-  <tr>
-    <td align="left" valign="top">
-      <br />
-      <br />
-      <span class="applefix" style="font-family:Arial; font-size:14px; color:#888888;">
-        <b>Our Address:</b><br />
-        CMG<br />
-        htp://cmgv3.com<br />
-        
-      </span>
-      <br />
-      <br />
-    </td>
-  </tr>
-</table>
+          </td>
+        </tr>
+      </table>
+    </body>
+  </html>
