--- a/app/views/show/_blank.html.erb
+++ b/app/views/show/_blank.html.erb
@@ -1,5 +1,6 @@
    <div class="clearfix"></div>
-   <span class="lead pl30"> Upcoming Events</span>
+ <div class="page-header row row-same-height"><h4 class="col-sm-12 col-xs-height text-uppercase">Upcoming Events</h4> </div>
+  
  <div> 
    <% contract.each do |contract| %>
    <div class="sheet-inner m20 pl30 pr30 pt20">
