--- a/app/views/contract_mailer/send_reminder.html.erb
+++ b/app/views/contract_mailer/send_reminder.html.erb
@@ -1,8 +1,16 @@
+<div class="container column">
 <p>You have UN-CONFIRMED Events.</p>
-<p>Please login to <a href="http://www.confirmmygig.com">http://www.confirmmygig.com</a> and review.</p>
+<p>Please login to <a href="http://www.cmgv3.com">http://www.cmgv3.com</a> and review.</p>
 
-<p>If you don't remember your login or need to change your password please click <a href="http://confirmmygig.com/users/secret/new">HERE</a></p>
-<%= @contract %>
+<%# contract.each do |contract| %>
+
+<%#= contract.contract_number %> 
+
+<%# end %>
+
+<p>If you don't remember your login or need to change your password please click <a href="http://www.cmgv3.com/">HERE</a></p>
+<%= "#{contract.act_booked}" %>
 
 Thank you<br>
 Washington Talent
+</div>
