--- a/app/views/contracts/_manager.html.erb
+++ b/app/views/contracts/_manager.html.erb
@@ -1,2 +1,2 @@
-<div class="page-header row row-same-height"><h4 class="col-sm-12 col-xs-height text-uppercase"> Managers Panel</h4></div>
+<!--<div class="page-header row row-same-height"><h4 class="col-sm-12 col-xs-height text-uppercase"> Managers Panel</h4></div>-->
 <%= render  '/show/blank', contract: Contract.where(act_code: @manger.split(",")).order(params[:sort] || :date_of_event).tenday.all  %>
