--- a/app/views/contracts/calendar.html.erb
+++ b/app/views/contracts/calendar.html.erb
@@ -18,5 +18,7 @@
 <!--    <p id="eventInfo"></p>-->
 <!--    <p><strong><a id="eventLink" href="" target="_blank">Read More</a></strong></p>-->
 <!--</div>-->
+<div class="sheet sheet-inner">
 <div class="m10 text-gray50" id="calendar"></div>
 <!--</div>-->
+</div>
