--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <% @title = "Edit #{resource_name.to_s.humanize}" %>
-<%= render :layout => "layouts/minimal" do %>
+<%#= render :layout => "layouts/minimal" do %>
 <%#= render partial: "layouts/sidenav" %>
 <%# current_user.update_attribute :admin, true %>
 <div id="main" class='devise'>
@@ -63,7 +63,7 @@
                 We need your current password to confirm your changes.
               </div>
             </div>
-            <% unless current_user.try(:manager?) %>
+            <% if current_user.try(:type) == "Super" %>
             <%= f.form_group :password do |f| %>
              <%= f.label :admin, class: "col-xs-1 col-sm-2 col-md-2 control-label" %>
             <div class="col-sm-10">
@@ -74,7 +74,7 @@
             <% end %>
           <% end %>
           
-           <% unless current_user.try(:manager?) %>
+           <% if current_user.try(:type) == "Super" %>
             <%= f.form_group :password do |f| %>
              <%= f.label :approved, class: "col-xs-1 col-sm-2 col-md-2 control-label" %>
             <div class="col-sm-10">
@@ -95,4 +95,4 @@
     </div>
   </div>
 </div>
-<% end %>
+<%# end %>
