--- a/app/views/layouts/_base.html.erb
+++ b/app/views/layouts/_base.html.erb
@@ -33,7 +33,7 @@
     <%= yield :head %>
   </head>
   <body class="<%= yield (:body_class) %>">
-    <%= render "layouts/navbar" %>
+    <%#= render "layouts/navbar" %>
 
     <header>
       <%= yield :header %>
