--- a/app/views/layouts/_user_nav.html.erb
+++ b/app/views/layouts/_user_nav.html.erb
@@ -1,13 +1,42 @@
 <%# Links for current user. %>
-<nav class='navbar'>
-  <div class='navbar-brand'>
-    My App
-  </div>
-  <div class="navbar-text pull-right">
-  
-    <%= fa_icon_tag "user" %> Welcome, <strong><%= "User" %></strong>
-    <span class="divider">|</span>
-    <%= link_to "Settings", "#" %>
-  
-  </div>
+
+    <div class="navbar navbar-default navbar-shadow">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span>MENU</span>
+        </button>
+        <a href="#" class="navbar-brand"><%= app_name %></a>
+      </div>
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+           <% unless current_user.try(:type) == "User" %>
+          <li class=""><%= link_to "Home", root_path %></li>
+          <li class=""><%= link_to "Profile", edit_user_registration_path %></li>
+          <li class=""><%= link_to "Calendar", calendar_path %></li>
+          <li class=""><%#= link_to "Users", users_path %></li>
+          <% if current_user.try(:type) == "ManagerUser" %> <li class=""><%= link_to "Staff", players_path %></li> <% end %>
+          <li class=""><%#= link_to "Payroll", payroll_path %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %> </li>
+          <!--<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Clusters <span class="caret"></span></a>-->
+          <!-- <ul class="dropdown-menu">-->
+          <!--    <li class=""><a href="#">Calendar</a></li><%#= link_to "Calendar", calendar_path %>-->
+          <!--    <li class=""><a href="#">Cluster 2</a></li>-->
+          <!--    <li class=""><a href="#">Cluster 3</a></li>-->
+          <!--    <li class=""><a href="#">Cluster 4</a></li>-->
+          <!--  </ul>-->
+          <!--</li>-->
+          <% end %>
+       </ul>
+     </div>
+   </div>
+   <div class="bg-white">
+  <% if user_signed_in? %>
+    <% if current_user.try(:type) == "ManagerUser" %>
+   <%= render  'shared/quickjobs', contract: Contract.where(act_code: @manger.split(",")).order(params[:sort] || :date_of_event).tenday.all  %>
+   <% else %>
+   <%##########;lp= render "layouts/usernav" %> 
+   <% end %>
+   <% end %>
+</div>
 </nav>
