--- a/app/views/shared/_quickjobs.html.erb
+++ b/app/views/shared/_quickjobs.html.erb
@@ -1,22 +1,23 @@
 <%#= link_to user.login, "/switch_user?scope_identifier=user_#{user.id}" %>
 
 <% if current_user.try(:manager?) %>
- <div class="navbar navbar-default navbar-shadow">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#second-content-nav">
+<div class="panel-heading">Quick Menu</div>
+ <div class="navbar  navbar-shadow">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#second-content-nav">Quick Jobs Menu
           <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+          <!--<span class="icon-bar"></span>-->
+          <!--<span class="icon-bar"></span>-->
+          <!--<span class="icon-bar"></span>-->
         </button>
-        <h4 class="text-center text-grey-50">Quick Jobs</h4>
+        <!--<h4 class="text-center text-grey-50">Quick Jobs</h4>-->
       </div>
 
-<div class="collapse navbar-collapse bg-grey-50" id="second-content-nav">
+<div class="collapse navbar-collapse " id="second-content-nav">
 
 
-<ul class="nav navbar-nav">
+<ul class="nav navbar-nav text-gray-50">
    <% contract.each do |contract| %>
-<li class=""><%= link_to "#{contract.date_of_event.strftime("%m/%d/%y")} - #{contract.last_name}  - #{contract.act_code}", contract %></li>
+<li class="btn btn-flat btn-outline-inverse m10"><%= link_to "#{contract.date_of_event.strftime("%m/%d/%y")} - #{contract.last_name}  - #{contract.act_code}", contract %></li>
 </ui>
 
 <% end %>
