found correct sender for send_reminder

--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -4,6 +4,8 @@
 <%#= admin_types.include?(current_user.try(:type)) %>
 <%# if admin_types.include?(current_user.try(:type?)) %>
 <%#= link_to "emails", rails_email_preview.rep_root_url %>
+<%#= @con.inspect %>
+<%#= @users.count %>
 <%#= @userss.inspect %>
 <% if current_user.try(:type) == "ManagerUser" %>
 
