--- a/app/views/contract_mailer/send_reminder.html.erb
+++ b/app/views/contract_mailer/send_reminder.html.erb
@@ -9,7 +9,7 @@
 <%# end %>
 
 <p>If you don't remember your login or need to change your password please click <a href="http://www.cmgv3.com/">HERE</a></p>
-<%= "#{contract.act_booked}" %>
+<%#= "#{contract.act_booked}" %>
 
 Thank you<br>
 Washington Talent
