--- a/app/views/contract_mailer/event_info_email_with_net_money.html.erb
+++ b/app/views/contract_mailer/event_info_email_with_net_money.html.erb
@@ -1,95 +1,135 @@
+
+<dl class="section">
 Act Name: <%= @contract.act_booked %><br>
 Type of Event: <%= @contract.type_of_event %><br>
 Operating as: <%= @contract.type_of_act %><br>
 Form of: <%= @contract.act_form %><br>
-<hr>
-<span>Event Location</span>
-<%= @contract.location_name %><br><br>
-<%= "#{@contract.location_address_line_1}" %> <br> <%= "#{@contract.location_city} #{@contract.location_state} #{@contract.location_zip}" %><br>
+<b>Date of event:</b> <%= @contract.date_of_event.to_formatted_s(:eventdate) %><br>
+<b>Event Time:</b> 
+<%= @contract.eventtime %><br>
+</dl>
+
+<table class="pretty padding">    
+<tr>
+<td>    
+
+Client Info: <%= @contract.first_name %> <%= @contract.last_name %><br>
+Company: <%= @contract.company %><br>
+Email Address: <%= @contract.email_address %><br>
+<%= content_tag(:span, "Bride / Bat Mitzvah Name: #{@contract.brides_names}") unless @contract.brides_names.blank? %><br>
+Grooms / Bar Mitzvah Name: <%= @contract.grooms_name %><br>
+Home Phone: <%= @contract.home_phone %><br>
+Work Phone: <%= @contract.work_phone %><br>
+Cell Phone: <%= @contract.cell_phone %><br>
+Contract Status:<%= @contract.contract_status %><br> 
+Contract number: <%= @contract.contract_number %> 
+
+</td>
+<td>
+Ceremony/Service Section<br>
+Ceremony Date: <%= @contract.date_of_ceremony %><br>
+Ceremony Location: <%= @contract.ceremonoy_location_name %><br>
+Ceremony Address: <%= @contract.ceremonoy_address_line_1 %><br>
+<%= @contract.ceremony_address_line_2 %><br>
+Ceremony City: <%= @contract.ceremony_location_city %><br>
+Ceremony State: <%= @contract.seremonly_location_state %><br>
+Ceremony Zip: <%= @contract.ceremony_location_zip %><br>
+Ceremony Start Time: <%= @contract.ceremony_start_time %><br>
+Ceremony Instrumentation: <%= @contract.ceremony_instrumenttation %><br>
+</td>
+</tr>
+</table>
+
+<dl class="white">
+
+<table class="pretty padding">    
+<tr>
+<td>    
+Event Location:<br>
+<%= @contract.location_name.gsub('"', ' ') %><br>
+<%= "#{@contract.location_address_line_1}" %><br>
+<%= "#{@contract.location_city} #{@contract.location_state} #{@contract.location_zip}" %> <br>
+
 Phone:<%= @contract.location_phone %><br>
-<hr>
-Contract Status:<%= @contract.contract_status %><br>
-<b>Date of event: </b><%= @contract.date_of_event.to_formatted_s(:eventdate) %><br>
-<b>Event Time: </b><%= @contract.eventtime %><br>
-<hr>
-Agent : <%= @contract.agent %><br>
-Contract number: <%= @contract.contract_number %><br>
+</td>
+
+<td>
+Pickup Amount: <%= number_to_currency(@contract.pick_up_amount) %><br>
+
 Net Amount: <%= number_to_currency(@contract.act_net) %><br>
-Pickup Amount: <%= number_to_currency(@contract.pick_up_amount) %>
+</td>
+</tr>
+</table>
 
+
+<table>    
+<tr>
+<td> 
+
+</td>
+<td>
+
+</td>
+</tr>
+</table>
+
+
+<table>    
+<tr>
+<td>
+<%= content_tag (:div), :class => "dl-horizontal" do %>
+<%= content_tag(:div, "Early setup Time            #{@contract.early_setup_time}") unless @contract.early_setup_time.blank? %>
+<%= content_tag(:div, "Giveaways:                  #{@contract.giveaways}")  unless @contract.giveaways.blank? %>
+<%= content_tag(:div, "Type of Light Show:         #{@contract.type_of_light_show}") unless @contract.type_of_light_show.blank? %>
+<%= content_tag(:div, "Includes DJ Tech:           #{@contract.tech}") unless @contract.tech == "F" %>
+<%= content_tag(:div, "Number of Horns:            #{@contract.number_of_horns}") unless @contract.number_of_horns.blank? || 0 %>
+<%= content_tag(:div, "Number of Dancers:          #{@contract.number_of_dancers}") unless @contract.number_of_dancers.blank? || 0 %>
+<%= content_tag(:div, "Pick up Reason              #{@contract.explanation_opf_pickup_adjustment}") unless @contract.explanation_opf_pickup_adjustment.blank? %>
+<%= content_tag(:div, "Cap Music:                  #{@contract.capital_music_player}") unless @contract.capital_music_player.blank? %>
+<%= content_tag(:div, "Quest. Received:            #{@contract.questionnaire_received_date}") unless @contract.questionnaire_received_date.blank? %>
+<%= content_tag(:div, "Referral Fee to :           #{@contract.referral_fee_to}") unless @contract.referral_fee_to.blank? %>
+<%= content_tag(:div, "Song Requests:              #{@contract.song_requests}") unless @contract.song_requests.blank? %>
+<%= content_tag(:div, "Cocktail Instrumentation:   #{@contract.cocktail_instrumentation}") unless @contract.cocktail_instrumentation.blank? %>
+<%= content_tag(:div, "Cocktail Time:              #{@contract.cocktail_time}") unless @contract.cocktail_time.blank? %>
+<%= content_tag(:div, "Company:                    #{@contract.company}") unless @contract.company.blank? %>
+<% end %>
+</td>
+<td>
+    <%= content_tag (:div), :class => "dl-horizontal" do %>
+    <%= content_tag(:div, "Player:                    #{@contract.videographer_1}") unless @contract.videographer_1.blank? %>
+    <%= content_tag(:div, "Player:                    #{@contract.videographer_2}") unless @contract.videographer_2.blank? %>
+    <%= content_tag(:div, "Player:                    #{@contract.videgrapher_3}") unless @contract.videgrapher_3.blank? %>
+    <%= content_tag(:div, "Player:                    #{@contract.player4}") unless @contract.player4.blank? %>
+    <%= content_tag(:div, "Player:                    #{@contract.player5}") unless @contract.player5.blank? %>
+    <%= content_tag(:div, "Player:                    #{@contract.player6}") unless @contract.player6.blank? %>
+    <%= content_tag(:div, "Player:                    #{@contract.player7}") unless @contract.player7.blank? %>
+    <%= content_tag(:div, "Player:                    #{@contract.player8}") unless @contract.player8.blank? %>
+    <% end %>
+</td>
+</tr>
+</table>
+
+<table class="gray padding">    
+<tr>
+<td> 
+<span>Contract Provisions</span>
+<% unless @contract.contract_provisions == "nil" %>
+<%=  @contract.contract_provisions.gsub('"', ' ') unless @contract.contract_provisions.blank? %>
+<% end %>
 <hr>
-<span>Client Section</span>
-    Client Info: <%= @contract.first_name %> <%= @contract.last_name %><br>
-    Company:    <%= @contract.company %><br>
-    Email Address: <%= @contract.email_address %><br>
-    Bride / Bat Mitzvah Name: <%= @contract.brides_names %><br>
-    Grooms / Bar Mitzvah Name: <%= @contract.grooms_name %><br>
-
-    Home Phone: <%= @contract.home_phone %><br>
-    Work Phone: <%= @contract.work_phone %><br>
-    Cell Phone: <%= @contract.cell_phone %>
-
-<span>Extras Section</span>
-                  Cocktail Instrumentation:  <%= @contract.cocktail_instrumentation %><br>
-                  Cocktail Time:  <%= @contract.cocktail_time %><br>
-Early setup Time:   <%= @contract.early_setup_time %><br>
-<br>Giveaways: <%= @contract.giveaways %><br>
-Type of Light Show : <%= @contract.type_of_light_show %><br>
-Includes DJ Tech:          <%=  @contract.tech unless @contract.tech == "F" %><br>
- Number of Horns: <%= @contract.number_of_horns %><br>
- Number of Dancers: <%= @contract.number_of_dancers %><br><br>
-<hr>
-    Pick up Reason<%= @contract.explanation_opf_pickup_adjustment %><br>
-    <%= @contract.capital_music_player %><br>
-
-    <%= @contract.questionnaire_received_date %><br>
-
-
-    Referral Fee to :<%= @contract.referral_fee_to %><br>
-    Song Requests: <%= @contract.song_requests %><br>
-    <br>
-    <hr>
-    <br>
-        Song Requests: <%= @contract.song_requests %><br>
-
-     <span>Ceremony/Service Section</span>
-
-    Ceremony Date:  <%= @contract.date_of_ceremony %><br>
-    Ceremony Location:  <%= @contract.ceremonoy_location_name %><br>
-    Ceremony Address:   <%= @contract.ceremonoy_address_line_1 %><br>
-    <%= @contract.ceremony_address_line_2 %><br>
-    Ceremony City:  <%= @contract.ceremony_location_city %><br>
-    Ceremony State: <%= @contract.seremonly_location_state %><br>
-    Ceremony Zip:   <%= @contract.ceremony_location_zip %><br>
-    Ceremony Start Time:    <%= @contract.ceremony_start_time %><br>
-    Ceremony Instrumentation:   <%= @contract.ceremony_instrumenttation %><br>
-
-
-    Player Section<br>
-    <dt>Player 1: </dt> <%= @contract.videographer_1 %><br>
-    <dt>Player 2: </dt> <%= @contract.videographer_2 %><br>
-    <dt>Player 3: </dt> <%= @contract.videgrapher_3 %><br>
-    <dt>Player 4: </dt> <%= @contract.player4 %><br>
-    <dt>Player 5: </dt> <%= @contract.player5 %><br>
-    <dt>Player 6: </dt> <%= @contract.player6 %><br>
-    <dt>Player 7: </dt> <%= @contract.player7 %><br>
-    <dt>Player 8: </dt> <%= @contract.player8 %><br>
-<hr>
-
-        <span>Contract Provisions</span>
- <% unless @contract.contract_provisions == "nil" %>
-                                <%=  @contract.contract_provisions.gsub('"', ' ') unless @contract.contract_provisions.blank? %>
-                            <% end %>
-<hr>
-                    <span>Act Notes</span>
-                            <% unless  @contract.act_notes == "nil" %>
-                                <%= @contract.act_notes %>
-                            <% end %>
-        <span>All Services Provided</span>
-    <ul>
-            <% @additional.each do |addi| %>
+<span>Act Notes</span>
+<% unless  @contract.act_notes == "nil" %>
+<%= @contract.act_notes %>
+<% end %>
+<span>All Services Provided</span>
+<ul>
+<% @additional.each do |addi| %>
 <li><%= "#{addi.act_booked} - #{addi.type_of_act} - #{addi.act_form} - #{addi.eventtime}" %></li>
 
-            <% end %></ul>
+<% end %></ul>
 <% content_for :money do %>
-    <% end %>
+<% end %>
+</dl>
+</td>
+</tr>
+</table>
