--- a/app/views/contracts/search.html.erb
+++ b/app/views/contracts/search.html.erb
@@ -3,6 +3,9 @@
 
 
 <%# @contract.group_by(&:actform).each do |actform, c| %>
+<div class="sheet-inner"><%= switch_user_select class: 'special-select', styles: 'width: 220px' %>
+
+</div>
 <div class="sheet-inner">
 
     <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
