--- a/app/views/contracts/_admin.html.erb
+++ b/app/views/contracts/_admin.html.erb
@@ -1,3 +1,3 @@
 <div class="page-header row row-same-height"><h4 class="col-sm-12 col-xs-height text-uppercase">Admin Panel</h4></div>
 <%#= render  '/show/blank', contract: Contract.where(act_code: @manger.split(",")).order(params[:sort] || :date_of_event).tenday.all  %>
-<%= render  '/reports/top'  %>
+<%#= render  'report'  %>
