--- a/app/views/reports/_top.html.erb
+++ b/app/views/reports/_top.html.erb
@@ -3,7 +3,7 @@
 <div class="sheet-inner">
    <div>
    
-   <%= @contract.count %>
+   <%= @contract.inspect %>
    
    <%= line_chart @contract.group_by_day(:date_of_event).sum(:contract_price) %>
    <%= column_chart @contract.group_by_day_of_week(:created_at, format: "%a").sum(:contract_price) %>
