--- a/app/views/show/_buttonsacross.html.erb
+++ b/app/views/show/_buttonsacross.html.erb
@@ -25,14 +25,14 @@
 
  <% unless contract.unconfirmed? %>
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<h4><% if current_user.try(:type) == "ManagerUser" %><%= link_to 'Email All Money', emailjobwithallmoney_path(id: contract.id), class: 'btn btn-flat btn-sm btn-danger' %><% end %> </h4>
+<h4><% if current_user.try(:type) == "Super" %><%= link_to 'Email All Money', emailjobwithallmoney_path(id: contract.id), class: 'btn btn-flat btn-sm btn-danger' %><% end %> </h4>
 <span class="metric-value">
 
 </span>
 <div class="small"></div>
 </div>
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-<h4><% if current_user.try(:type) == "ManagerUser" %><%= link_to 'Email Net Money', emailjobwithnetonly_path(id: contract.id), class: 'btn btn-flat btn-sm btn-success' %> <% end %></h4>
+<h4><% if current_user.try(:type) == "Super" %><%= link_to 'Email Net Money', emailjobwithnetonly_path(id: contract.id), class: 'btn btn-flat btn-sm btn-success' %> <% end %></h4>
 <span class="metric-value">
 
 </span>
