--- a/app/views/show/_numberofthings.html.erb
+++ b/app/views/show/_numberofthings.html.erb
@@ -29,7 +29,7 @@
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
 <dt>Contract Price </dt>
 <span class="metric-value">
-<%= content_tag(:strong,"#{number_to_currency(contract.contract_price)}")  unless self.blank? || contract.contract_price == 0  %><br>
+<%= content_tag(:strong,"#{number_to_currency(contract.contractprice)}")  unless self.blank? || contract.contract_price == 0  %><br>
 
 </span>
 </div>
