--- a/app/views/show/_moneysection.html.erb
+++ b/app/views/show/_moneysection.html.erb
@@ -1,6 +1,8 @@
 
 
 <!--<div class="col-lg-12 col-md-12 col-sm-12 text-center bg-warning pt20 pb20">-->
+
+<%#= @contract.referral_fee_amount %>
 <div class="col-lg-12 col-md-12 col-sm-12 text-center pt20 pb20 bg-warning">
 
 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
