--- a/app/views/contracts/_groupjobs.html.erb
+++ b/app/views/contracts/_groupjobs.html.erb
@@ -1,7 +1,7 @@
 <%#= @user.inspect %>
 <div class="sheet-inner">
 <!--<h3>Number of jobs in the next 10 Days: </h3>-->
-<%#= (@contractfour).count %> 
+<%= (@contractfour).count %> 
 
 
 <h4>Event in the Next 10 Days</h4>
