--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -59,7 +59,7 @@
       <%= render  "show/actnotes", contract: @contract %>
       <%= render  "show/addservices", contract: @contract %>
       <%= render "show/weddingstuff", contract: @contract %><hr>
-      <%#= render  "show/moneysection", contract: @contract %>
+      <%= render  "show/players", contract: @contract %>
       <%#= render  "show/clientextra", contract: @contract %>   <!-- DO LATER -->
       
       <p><%#= link_to "Add Staff", new_user_path %></p>
