--- a/app/views/layouts/_base.html.erb
+++ b/app/views/layouts/_base.html.erb
@@ -27,7 +27,7 @@
    
 
     <!-- Le fav and touch icons -->
-    <%= favicon_link_tag %>
+    <%#= favicon_link_tag %>
     <%# favicon_link_tag "apple-touch-icon.png", :rel => "apple-touch-icon" %>
 
     <%= yield :head %>
