--- a/app/views/layouts/_centered.html.erb
+++ b/app/views/layouts/_centered.html.erb
@@ -21,7 +21,7 @@
     <%= yield :styles %>
 
     <!-- Le fav and touch icons -->
-    <%= favicon_link_tag %>
+    <%#= favicon_link_tag %>
     <%# favicon_link_tag "apple-touch-icon.png", :rel => "apple-touch-icon" %>
 
     <%= yield :head %>
