--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,18 @@
 
         <div class="sheet form-sheet">
           <div class="sheet-inner">
+            <%= f.form_group :first_name do |f| %>
+              <%= f.label :first_name, class: "form-label" %>
+              <%= f.text_field :first_name, class: "" %>
+              <%= f.error_messages %>
+            <% end %>
+
+              <%= f.form_group :last_name do |f| %>
+                <%= f.label :last_name, class: "form-label" %>
+                <%= f.text_field :last_name, class: "" %>
+                <%= f.error_messages %>
+              <% end %>
+
             <%= f.form_group :email do |f| %>
               <%= f.label :email, class: "form-label" %>
               <%= f.email_field :email, autofocus: true, class: "" %>
@@ -32,11 +44,17 @@
               <%= f.password_field :password_confirmation, class: "" %>
               <%= f.error_messages %>
             <% end %>
+
+            <%= f.form_group :actcode_name do |f| %>
+              <%= f.label :actcode, class: "form-label" %>
+              <%= f.text_field :actcode_name, class: "" %>
+              <%= f.error_messages %>
+            <% end %>
           </div>
         </div>
 
         <div class="form-actions text-right">
-          <%#= f.submit "Sign up", class: 'btn btn-primary' %>
+          <%= f.submit "Sign up", class: 'btn btn-primary' %>
         </div>
       <% end %>
     </div>
