--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -58,12 +58,12 @@
         </div>
       <% end %>
     </div>
-    <div class="row mt20">
+    <!-- <div class="row mt20">
       <div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 text-right">
         <ul class="list-unstyled options">
           <li class="col-xs-12"><%= link_to "Log in", new_session_path(resource_name), class: '' %></li>
         </ul>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
