--- a/app/views/contracts/_search.html.erb
+++ b/app/views/contracts/_search.html.erb
@@ -7,9 +7,10 @@
 <div class="sheet-inner">
 
     <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
-       <div class="form">
+       <div class="form">fhfhfh
          <%= form_tag(search_path, :method => "get", id: "search-form") do %>
-         <%= text_field_tag :search, params[:search], placeholder: "Search Contracts" %>
+         <%= text_field_tag :search, params[:search], placeholder: "Search By Date" %>
+         <%= text_field_tag :search, params[:search], placeholder: "Search ACTCODE", id: 'byact' %>
          <%= submit_tag "Search" %>
          <% end %>
        </div>
@@ -20,13 +21,13 @@
        <%= render 'contracts' %>
          <% end %>
        </div>
-       
-   
-   
+
+
+
    </div>
    </div>
        <div class="col-lg-6 col-md-6 col-sm-12 animate-drop-fade">
-       
+
     <div>
        <div class="results pt20">
           <h3>Available</h3>
@@ -34,13 +35,10 @@
      <%= render 'contractsava' %>
      <% end %>
        </div>
-       
-   
-   
+
+
+
    </div>
    </div>
    <div class="clearfix"></div>
 </div>
-
-
- 
