readded money for super

--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -46,11 +46,11 @@
 <div class="container-fluid">
    <div class="row sheet-inner mt20">
        <%#= @activities %>
-       <% if current_user.try(:type) == "ManagerUser" %>
+       <% if current_user.try(:type) == "ManagerUser" || "Super" %>
        <%= render "show/numberofthings", contract: @contract %>
        <%= render  "show/moneysection", contract: @contract %>
        <% elsif current_user.try(:type) == "Leader" %>
-        
+
        <%= render "show/numberofthings", contract: @contract %>
        <%= render  "show/moneysection", contract: @contract %>
        <% end %>
@@ -61,11 +61,11 @@
       <%= render "show/weddingstuff", contract: @contract %><hr>
       <%= render  "show/players", contract: @contract %>
       <%#= render  "show/clientextra", contract: @contract %>   <!-- DO LATER -->
-      
+
       <p><%#= link_to "Add Staff", new_user_path %></p>
 
-      <% if current_user.try(:type) == "Super" %>  
-      <% render "staffing/assigned", contract: @contract %> 
+      <% if current_user.try(:type) == "Super" %>
+      <% render "staffing/assigned", contract: @contract %>
       <% end %>
        <%#= debug(params) %>
    </div>
@@ -96,11 +96,11 @@
 <!--<%#= @jobs %> -->
 
 <!--<p><%#= link_to "Add Staff", new_user_path %></p>
-            
- <%#= render "staffing/assigned", contract: @contract %> 
+
+ <%#= render "staffing/assigned", contract: @contract %>
          <!--</div>-->
 
- 
+
 
 <!--</div>-->
 <!--</div>-->
