--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -79,7 +79,8 @@
 
 
 
-
+<%= @contract.previous_changes %>
+<%= @contract.changed_attributes %>
 
 <!--<h3>Staff</h3>-->
    <!--<div class="sheet">-->
