--- a/app/views/contracts/search.html.erb
+++ b/app/views/contracts/search.html.erb
@@ -12,7 +12,7 @@
        <div class="form">
          <%= form_tag(search_path, :method => "get", id: "search-form") do %>
          <%= text_field_tag :search, params[:search], placeholder: "Search by Date" %>
-         <%= text_field_tag :search, params[:search], placeholder: "Search ACTCODE", id: 'byact' %>
+         <%#= text_field_tag :search, params[:search], placeholder: "Search ACTCODE", id: 'byact' %>
          <%= submit_tag "Search" %>
          <% end %>
        </div>
