--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -34,7 +34,7 @@
 
                                 <td class="actions">
                   <%= link_to fa_icon_tag("eye"), job, rel: 'tooltip', title: 'Show' %>
-               <% if current_user.try(:type) == "ManagerUser" || "Super" %>   <%= link_to fa_icon_tag("pencil"), edit_job_path(job), rel: 'tooltip', title: 'Edit' %> <% end %>
+               <% if current_user.try(:type) == "ManagerUser" || current_user.try(:type) == "Super" %>   <%= link_to fa_icon_tag("pencil"), edit_job_path(job), rel: 'tooltip', title: 'Edit' %> <% end %>
                   <%#= link_to fa_icon_tag("trash-o"), job, rel: 'tooltip', title: 'Delete',
                   data: { confirm: 'Are you sure?' }, method: :delete %>
                 </td>
